<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BC34A"
    tools:context=".Barishal_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/BargunaTextId"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/BargunaText"
            />
        <Button
            android:id="@+id/BarishalTextId"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/BarishalText"
            />
        <Button
            android:id="@+id/BholaTextId"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/BholaText"
            />
        <Button
            android:id="@+id/JhalokatiTextId"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/JhalokatiText"
            />
        <Button
            android:id="@+id/PatuakhaliTextId"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/PatuakhaliText"
            />
        <Button
            android:id="@+id/PirojpurTextId"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/PirojpurText"
            />


    </LinearLayout>

</ScrollView>